# promptly

./: .gitignore  README.md  pyproject.toml  spec.md
api/: __init__.py  deps.py  main.py  mcp_server.py  models.py  schemas.py
api/hooks/: pretooluse.py
api/prompts/: address_comments.md  generate_doc.md  generate_project_spec.md  generate_task.md
api/routers/: _helpers.py  docs.py  executions.py  internal.py  metadata.py  operations.py  permissions.py  projects.py  tasks.py
api/services/: __init__.py  claude.py  exec_protocol.py  execution.py  operations.py  permissions.py  prompts.py  worktree.py
api/storage/: __init__.py  atomic.py  comments.py  graph.py  paths.py  registry.py  service.py  slug.py
api/tests/: conftest.py  test_api.py  test_claude.py  test_exec_protocol.py  test_execution.py  test_operations.py  test_storage.py
docs/features/: 00-architecture-overview.md  01-data-model-and-storage.md  02-python-api-server.md  03-claude-cli-integration.md  04-frontend-foundation.md  05-design-tab.md  06-plan-tab.md  07-execution-engine.md  08-build-tab.md  09-prompts-and-permissions.md  10-settings-screen.md  README.md
prompts/: _shared.md.j2  address_comments.md.j2  chat_edit.md.j2  execute_task.md.j2  generate_doc.md.j2  generate_project_spec.md.j2  generate_task.md.j2  import_metadata.md.j2  plan_steps.md.j2  plan_tasks.md.j2
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: GenerateTasksButton.tsx  MetadataPanel.tsx  Modal.tsx  PromptDialog.tsx  Spinner.tsx  (+2 more)
(+25 files in other folders)
