[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "promptly"
version = "0.1.0"
description = "Design, plan, and build software projects with AI."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2",
    "sse-starlette>=2",
    "jinja2>=3.1",
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx"]

[tool.setuptools.packages.find]
include = ["api*"]

[tool.pytest.ini_options]
testpaths = ["api/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
